--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ docker==6.0.0
 Flask==2.2.2
 glob2==0.7
 h11==0.13.0
-helium==3.0.8
+#helium==3.0.8
 idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.1.2
